favicon added and #

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 		<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/mnagejdhifpmdhmiejpapilgmlnommlk">
 
     <link rel="stylesheet" href="http://hackerthemes.com/node_modules/bootstrap/dist/css/bootstrap.min.css" media="all">
@@ -37,7 +40,7 @@
                   calling extra attention to featured content or information.</p>
 	<div id="code">
 		<p class="lead">
-    	<a class="btn btn-primary btn-lg" onclick="chrome.webstore.install('https://chrome.google.com/webstore/detail/cpioechnjgdjbhklpkhinhooblipfdak',suc,fail)" id="install-button" href="#" role="button">Add to Chrome</a>
+    	<a class="btn btn-primary btn-lg" onclick="chrome.webstore.install('https://chrome.google.com/webstore/detail/cpioechnjgdjbhklpkhinhooblipfdak',suc,fail)" id="install-button" role="button">Add to Chrome</a>
   	</p>
 	</div>
 </center>
