favicon added and #

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-		<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/mnagejdhifpmdhmiejpapilgmlnommlk">
+		<link href='https://chrome.google.com/webstore/detail/cpioechnjgdjbhklpkhinhooblipfdak' rel='chrome-webstore-item'/>
 
     <link rel="stylesheet" href="http://hackerthemes.com/node_modules/bootstrap/dist/css/bootstrap.min.css" media="all">
   <link rel="stylesheet" href="http://hackerthemes.com/node_modules/font-awesome/css/font-awesome.css" media="all">
