--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     	<a class="btn btn-primary btn-lg" onclick="chrome.webstore.install('https://chrome.google.com/webstore/detail/cpioechnjgdjbhklpkhinhooblipfdak',suc,fail)" id="install-button" role="button">Add to Chrome</a>
   	</p>
 	</div>
+  <br/>
+  <a class="e-widget no-button" href="https://gleam.io/g4bb2/win-200rs-mobile-recharge" rel="nofollow">WIN 200rs MOBILE RECHARGE</a>
+<script type="text/javascript" src="https://js.gleam.io/e.js" async="true"></script>
 </center>
 </div>
 <script>
